src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --scroll-margin-top: 120px;
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
} */

html {
  /* width: 100%; */
  scroll-behavior: smooth;
}

body {
  color: rgb(var(--foreground-rgb));
  background: rgb(var(--background-end-rgb));
}


/* .container{
  display: flex;
  padding: 36px 32px;
  justify-content: space-between;
  align-items: center;
  align-self: stretch;
  background-color: rgb(var(--background-end-rgb));
} */


header .container {
  /* justify-self: center; */
  display: flex;
  max-width: 1440px;
  /* padding: 36px 32px; */
  /* padding: 25px 270px; */
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 25px;
  margin: 0 auto;
  align-self: stretch;
}


main .container {
  /* justify-self: center; */
  display: flex;
  max-width: 1440px;
  /* padding: 25px 270px; */
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 25px;
  margin: 0 auto;
  align-self: stretch;
}

footer .container {
  display: flex;
  max-width: 1440px;
  /* padding: 25px 270px; */
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 25px;
  margin: 0 auto;
  align-self: stretch;
}

@media (max-width:768px) {
  .container {
    /* justify-self: center; */
    padding: 25px 24px;
    /* background-color: aliceblue; */
  }
}

@media (min-width:768px) {
  .container {
    /* justify-self: center; */
    padding: 25px 60px;
    /* background-color: gray; */
  }
}

@media (min-width:1024px) {
  .container {
    /* justify-self: center; */
    padding: 25px 60px;
    /* background-color: cyan; */
  }
}

@media (min-width:1440px) {
  .container {
    /* justify-self: center; */
    padding: 25px 60px;
    /* background-color: rgb(179, 63, 111); */
  }
}

